public/css/protein.css
.container {
    display: flex;
    position: relative;
    margin: 0px;
    padding: 0px;
}

#renderer {
    position: absolute;
    width: 100%;
    height: 100%;
}

#gui {
    position: absolute;
    margin-top: 50px;
    margin-left: 50px;
    color: white;
}

.gui-box {
    font-family: 'Roboto', 'Sans Serif';
    margin: 3px;
    padding: 6px;
    border: 1px solid white;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    background-color: rgba(0,0,0,0.3);
    border: none;
}

.box {
    font-family: 'Roboto', 'Sans Serif';
    font-size: 1em;
    color: white;
    border: 1px solid white;
    border-radius: 5px;
    padding: 3px;
    outline: none;
    background-color: rgba(85, 85, 85, 0.9);
    border: 1px solid white;
    margin-top: 5px;
    width: 100%;
    transition: 0.4;
}

.box:hover {
    background-color: rgb(65, 65, 65);
}

.btn {
    margin-top: 5px;
    cursor: pointer;
}

input[type="file"] {
    display: none;
}

#texupload-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-left: 5px;
    padding-right: 5px;
}

#buttons {
    position: absolute;
    bottom: 20px;
    width: 80px;
    left: 50%;
    margin-left: -40px;
}

#button_restart, #button_stop, #button_start {
    opacity: 0.8;
}

#button_restart:hover, #button_stop:hover, #button_start:hover {
    opacity: 1;
}

