mod(display): gui is no longer visible on mobile screens (it only obstructs the view anyway...)

--- a/public/css/protein.css
+++ b/public/css/protein.css
@@ -82,3 +82,9 @@ input[type="file"] {
 #button_restart:hover, #button_stop:hover, #button_start:hover {
     opacity: 1;
 }
+
+@media (max-width: 700px) {
+    #gui {
+        visibility: hidden;
+    }
+}
